--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+
+
 			</plugin>
+
 		</plugins>
+
+		<finalName>docker-spring-boot-hello</finalName>
+
 	</build>
 
 </project>
